--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
  * This template takes a single argument, a String containing a
  * message to display.
  *@
-@(message: String)
+@()
 
 @*
  * Call the `main` template with two arguments. The first
@@ -15,6 +15,10 @@
      * Get an `Html` object by calling the built-in Play welcome
      * template and passing a `String` message.
      *@
-    @welcome(message, style = "scala")
+    <h1>Welcome to Play forms!</h1>
 
+    <div>
+        Basic Forms
+        <a href="@routes.BasicController.simpleForm">Simple form</a>
+    </div>
 }
