--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,6 +19,6 @@
 
     <div>
         Basic Forms
-        <a href="@routes.BasicController.simpleForm">Simple form</a>
+        <a href="@routes.BasicController.simpleForm()">Simple form</a>
     </div>
 }
